--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.3
-Pillow==10.0.0
+hFlask==2.3.3
 torch==2.0.1
 torchvision==0.15.2
-requests==2.30.0
+Pillow==10.0.0
+requests==2.31.0
 gunicorn==20.1.0
+flask-cors==3.1.1
