--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask==2.3.3
+Flask==2.2.3
 torch==2.0.1
 torchvision==0.15.2
-Pillow==10.0.0
-requests==2.31.0
-gunicorn==20.1.0
-flask-cors==4.0.1
+pillow==9.5.0
+Flask-Cors==3.1.1
