--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 Flask==2.2.3
-Werkzeug==2.2.3
 torch==2.0.1
 torchvision==0.15.2
-pillow==9.5.0
+Pillow==9.5.0
 Flask-Cors==4.0.1
 gunicorn==20.1.0
-numpy
+requests==2.31.0
