--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.2.3
-torch==2.0.1
-torchvision==0.15.2
-Pillow==9.5.0
-Flask-Cors==4.0.1
+Flask==2.3.3
 gunicorn==20.1.0
+torch==2.0.1
+torchvision==0.15.1
+Pillow==9.5.0
 requests==2.31.0
+numpy
