--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-Flask==2.3.3
-gunicorn==20.1.0
+Flask==2.3.2
+flask-cors==3.0.10
 torch==2.0.0
-torchvision==0.15.1
-Pillow==9.5.0
+torchvision==0.15.0
+Pillow==10.0.0
 requests==2.31.0
-numpy==1.25.0
-werkzeug==2.3.7
