--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.2
 flask-cors==3.0.10
-torch==2.0.0+cpu
-torchvision==0.15.0+cpu
+torch==2.0.1
+torchvision==0.15.1
 Pillow==10.0.0
 requests==2.31.0
